methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: value seenBaggle
seenBaggle==false
^MethodsReturning:3: error: not found: value seenBaggle
def haveBaggle():Boolean = {if (seenBaggle==true) {
                                ^MethodsReturning:17: error: not found: value seenBaggle
      seenBaggle==true
      ^